Make nvi contributors nested property. Remove search param contributor. Make contributor name keyword property.