@@ -373,7 +373,7 @@ public class OpenSearchClientTest {
         assertThat(searchResponse.hits().hits(), hasSize(1));
         assertTrue(requireNonNull(searchResponse.hits()
                                       .hits()
-                                      .get(0)
+                                      .getFirst()
                                       .source())
                        .approvals()
                        .stream()
@@ -434,7 +434,7 @@ public class OpenSearchClientTest {
         var indexDocuments = generateNumberOfCandidates(5);
         addDocumentsToIndex(indexDocuments.toArray(new NviCandidateIndexDocument[0]));
         var expectedHit = indexDocuments.get(2);
-        var searchTerm = expectedHit.publicationDetails().contributors().get(0).name();
+        var searchTerm = expectedHit.publicationDetails().contributors().getFirst().name();
         var searchParameters = defaultSearchParameters().withSearchTerm(searchTerm).build();
         var searchResponse = openSearchClient.search(searchParameters);
         assertThat(searchResponse.hits().hits(), hasSize(1));
@@ -509,28 +509,6 @@ public class OpenSearchClientTest {
         var searchParameters =
             defaultSearchParameters().withAffiliations(List.of(getLastPathElement(customer)))
                 .withTitle(getRandomWord(title))
-                .withYear(YEAR)
-                .build();
-
-        var searchResponse =
-            openSearchClient.search(searchParameters);
-
-        assertThat(searchResponse.hits().hits(), hasSize(1));
-    }
-
-    @Test
-    void shouldReturnSingleDocumentWhenFilteringByContributor() throws InterruptedException, IOException {
-        var customer = randomUri();
-        var contributor = randomString().concat(" ").concat(randomString()).concat(" ").concat(randomString());
-        var document = singleNviCandidateIndexDocumentWithCustomer(customer,
-                                                                   contributor, randomString(),
-                                                                   YEAR, randomString());
-        addDocumentsToIndex(document, singleNviCandidateIndexDocumentWithCustomer(
-            customer, randomString(), randomString(), randomString(), randomString()));
-
-        var searchParameters =
-            defaultSearchParameters().withAffiliations(List.of(getLastPathElement(customer)))
-                .withContributor(getRandomWord(contributor))
                 .withYear(YEAR)
                 .build();
 
@@ -704,7 +682,7 @@ public class OpenSearchClientTest {
     }
 
     private static NviCandidateIndexDocument getFirstHit(SearchResponse<NviCandidateIndexDocument> searchResponse) {
-        return searchResponse.hits().hits().get(0).source();
+        return searchResponse.hits().hits().getFirst().source();
     }
 
     private static List<NviCandidateIndexDocument> generateNumberOfCandidates(int number) {
